Fix alignment issues with text inputs and buttons

--- a/app/styles/templates/theme-01.scss
+++ b/app/styles/templates/theme-01.scss
@@ -51,6 +51,7 @@
       background-position: center !important;
       width: 100%;
       padding: 10px;
+      margin-bottom: 10px;
 
       background: #AAAAAA;
       color: #FFFFFF;
